# dbt-qod-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ci/: qod-stack.yml
.github/workflows/: ci.yml  publish.yml
dbt/adapters/qod/: __init__.py  column.py  connections.py  credentials.py  impl.py  relation.py
dbt/include/qod/: dbt_project.yml  profile_template.yml
dbt/include/qod/macros/: adapters.sql  catalog.sql
examples/jaffle_tpch/: README.md  RUN_REPORT.md  dbt_project.yml  profiles.yml
examples/jaffle_tpch/models/marts/: customer_order_summary.sql  orders_incremental.sql  schema.yml
examples/jaffle_tpch/models/staging/: sources.yml  stg_customer.sql  stg_orders.sql
examples/jaffle_tpch/seeds/: market_segment_labels.csv
examples/jaffle_tpch/snapshots/: orders_snapshot.sql
scripts/: release.sh
tests/: conftest.py
tests/functional/adapter/: test_basic.py
